force-app/main/default/objects/Book_Flight__c/fields/Flight_Arrival_time__c.field-meta.xml
<CustomField>
    <fullName>Flight_Arrival_time__c</fullName>
    <label>Flight Arrival time</label>
    <type>Time</type>
</CustomField>