force-app/main/default/objects/Book_Flight__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>