force-app/main/default/objects/Book_Flight__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Book Flights</relationshipLabel>
    <relationshipName>Book_Flights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>