force-app/main/default/objects/Book_Flight__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>